--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.1.2
   mobile_scanner: ^6.0.2
   url_launcher: ^6.3.1
+  path_provider: ^2.1.5
+  sqflite: ^2.4.0
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
